# paper_parser

./: .gitignore  CHANGELOG.md  LICENSE  README.md  data  pyproject.toml
.github/workflows/: ci.yml
notebooks/: data_exploration.ipynb  playground.ipynb
sample_data/pubmed/: papers.jsonl
sample_data/pubmed/processed/: sample.jsonl
sample_data/pubmed/raw/: PMC7000113.xml
scripts/pubmed/: 0-download-bulk-release-xml.py  1-build-pmc-id-db.py  1-extract-bulk-release-xml.py  2-lazy_runner.py  2-parse-xml-to-jsonl.py  3-concatenate-splits.py  3-extract-split-metadata.py  build-pmc-id-db.py
src/paper_parser/: __init__.py
src/paper_parser/arxiv/: __init__.py
src/paper_parser/pubmed/: __init__.py  parser.py  pmc_id_map.py  utils.py
src/paper_parser/shared/: __init__.py  schemas.py  sentence_tokenizer.py  utils.py
src/pubmed_parser/: __init__.py  pmc_parser.py  schemas.py  utils.py
tests/: test_pubmed_smoke.py
