[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-parser"
version = "0.1.0"
description = "Parse scientific papers from multiple sources (PubMed Central, arXiv, ...) into a common schema."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Jessica Lam", email = "contact@jessicalam.io" },
]
keywords = [
    "pubmed",
    "pmc",
    "arxiv",
    "jats",
    "xml",
    "parser",
    "scientific-papers",
    "bibliometrics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=5.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pydantic>=2.0",
    "regex>=2024.0",
    "seaborn>=0.13.2",
    "spacy>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/jessicalamjh/paper_parser"
Repository = "https://github.com/jessicalamjh/paper_parser"
Issues = "https://github.com/jessicalamjh/paper_parser/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_parser"]

[tool.hatch.build.targets.sdist]
include = [
    "src/paper_parser",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "ipywidgets>=8.1.8",
]
